2007-12-03  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: 
	* NEWS: Release 2.21.2

2007-11-14  Ryan Lortie  <desrt@desrt.ca>

	Based on a patch by Matthias Clasen, closes #314177

	* libgweather/weather.c: remove arrays of static copies of pixmaps for
	  all weather conditions (and remove enum used to index them).  Return
	  icon names directly.
	* libgweather/weather.h: remove get_pixbuf() and add get_icon_name()
	* gweather/gweather-dialog.c: use icon name and
	  gtk_image_set_from_icon_name instead of pixbufs.
	* gweather/gweather.h: remove applet_pixbuf, applet_mask members.
	* gweather/gweather-applet.c: set image from icon theme name (GtkImage
	  will now automatically update the image on icon theme changes).

2007-11-12  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: 
	* NEWS: Release 2.21.1

2007-11-04  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: New test for langinfo.h and the nl_langinfo
	function. The previous mechanism for determining its presence was
	incorrect. Patch from Matthias Clasen (Bug #491438).

2007-10-15  Brian Cameron  <brian.cameron@sun.com>

	* mixer/applet.c: Update fallback cb_check function
	  so that it only checks for volume change every 1.5
	  seconds, so it does not consume resources so heavily.
	  Upon noticing a change, it will update ten times per
	  second for 10 seconds after the last change, so the
	  mixer updates nicely while the volume is being 
	  changed.  Fixes enhancement request #486111.

2007-09-16  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: 
	* NEWS: release 2.20.0

2007-09-03  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: 
	* NEWS: release 2.19.91

2007-09-01  Callum McKenzie  <callum@spooky-possum.org>

	* MAINTAINERS: Updated to the new format.

2007-08-01  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: 
	* NEWS: release 2.19.1

2007-07-30  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: 