@@ -1,3 +1,8 @@
+2007-12-17  Sergey Udaltsov <svu@gnome.org>
+
+	* gswitchit.glade, gswitchit-applet.c: add printing of the layout,
+	from preview
+
 2007-08-26  Sergey Udaltsov <svu@gnome.org>
 
 	* GNOME_KeyboardApplet.server.in.in: does not work after first login,
