@@ -1,3 +1,7 @@
+2006-12-17  Sergey Udaltsov <svu@gnome.org>
+
+	* configure.in: depend on libgnomekbd 2.21.4.1
+
 2007-12-03  Callum McKenzie  <callum@spooky-possum.org>
 
 	* configure.in: 
